# api-einvoicing

./: .gitignore  README.md  database.sql  pyproject.toml
cmd/: consumer.py
compose/: docker-compose-kafka.yml
conf/: config.yaml
config_files/: local.env
scripts/: run_consumer.py  scan_pdf_directory.py
src/einvoicing/: config.py  models.py  scanner.py
src/einvoicing/api/: main.py
src/einvoicing/api/routes/: invoices.py
src/einvoicing/application/: invoice_publisher_service.py  pdf_scan_publisher_service.py  upload_orchestration_service.py
src/einvoicing/auth/: interfaces.py  jwt_token.py  jwt_token_provider.py  static_jwt_token_provider.py
src/einvoicing/auth/providers/: http_jwt_token_provider.py  static.py
src/einvoicing/context/: request_context.py
src/einvoicing/domain/: exceptions.py  invoice.py  invoice_history_event.py
src/einvoicing/infrastructure/: database.py
src/einvoicing/infrastructure/postgres/: postgres_app_status_repository.py  postgres_invoice_batch_repository.py
src/einvoicing/mappers/: doxallia_submission_response_mapper.py
src/einvoicing/messaging/invoice/: message.py
src/einvoicing/provider/: doxallia_client.py  exceptions.py  factory.py  interfaces.py  provider_client.py  provider_client_factory.py
src/einvoicing/provider/doxallia/: client.py  flow_info_builder.py
src/einvoicing/repositories/: app_status_repository.py  invoice_batch_repository.py  invoice_history_repository.py  invoice_repository.py
src/einvoicing/utils/: kafka.py
tests/: test_models.py  test_scanner.py
(+8 files in other folders)
